# PG-PYTHON_auto

./: .gitignore  Lab1_Auto.ipynb  Lab1_Auto_answers.ipynb  README.md  ex01.py  ex02_3.py  music.json  pyproject.toml
Day1/: Lab1_Auto.ipynb  ex02.py  ex02_2.py  ex02_4.py  prices.csv  Работа с файлами.ipynb
Day2/: Test_1_Auto.ipynb  anna_karenina.txt  ex01_01.py
Day2/Project/: functions.py  main.py  report_result.xlsx  report_template.xlsx
Day3/Pandas/: Lab3_pandas.ipynb  pandas_full_lection.ipynb
Day3/Test2_modules/: code.py  data.json  datamodule.py
Day4/: excel.py  lection_regex.ipynb  main.py  new_people_data_dubl.xlsx  people_data_dubl.xlsx  word_template_lection.ipynb
Day4/Lab3/: generate_leave_application.py  main.py  Заявление на отпуск.docx
Day5/: Morning_pandas_test_ver2.ipynb  weather.ipynb  weather.py
Day5/telegram_bot/: config.py  main.py  people_data_vacation.xlsx  work_with_excel.py
