[tool.poetry]
name = "pg-python-auto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pg_python_auto"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "2.1.1"
telebot = "^0.0.5"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
