[tool.poetry]
name = "pg-python-auto"
version = "0.1.0"
description = ""
authors = ["krivutsenkovd <xeokoin@gmail.com>"]
readme = "README.md"
packages = [{include = "pg_python_auto"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
